<resources>
    <string name="app_name">Database Store</string>

    <!-- Menu Strings -->
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="action_search">Search Database</string>

    <!-- Editor Activity strings -->
    <string name="category_overview">Overview</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>
    <!-- Text hint for variety field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_variety">Variety</string>
    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>
    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>
    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Price</string>
    <!-- Units for price of the item (Euro) [CHAR LIMIT=5] -->
    <string name="unit_item_price">Euro</string>
    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="supplier_name">Supplier</string>
    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_supplier">Supplier</string>
    <!-- Label for image information in the editor [CHAR LIMIT=30] -->
    <string name="image_name">Image</string>
    <!-- Text hint for image field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_image">Image</string>
    <!-- Text for insert image button -->
    <string name="insert_image_button">Insert image</string>
    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Quantity</string>
    <!-- Title Action save item -->
    <string name="action_save">Save item</string>
    <!-- Title Action delete item -->
    <string name="action_delete">Delete item</string>
    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>
    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving Item</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="editor_update_item_successfull">You successfully updated an item</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="add_time">"Add an item"</string>
    <string name="edit_item">"Edit item"</string>






</resources>
